[tool.poetry]
name = "project-rpg-data"
version = "0.1.0"
description = ""
authors = ["João Vítor dos Santos Almeida <jvsalmeida@sefaz.se.gov.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
